Bug 501656 - selected state is not exposed on selected HTML table cell, r=marcoz, davidb